[package]
name = "hrter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
serde = "1.0.195"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.29.1", features = [ "full" ] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
